force-app/main/default/objects/Mapping__c/fields/Copy_to_Master__c.field-meta.xml
<CustomField>
    <fullName>Copy_to_Master__c</fullName>
    <label>Copy to Master</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>