force-app/main/default/objects/Mapping__c/fields/Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field__c</fullName>
    <label>Destination_Field</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>