force-app/main/default/objects/Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Copy_to_Master__c</columns>
    <columns>Destination_Field__c</columns>
    <columns>Source_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>